--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="change_date">Change Date</string>
     <string name="comic_description">Comic image</string>
     <string name="fetch_random">Fetch Random</string>
+    <string name="today">Today</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="next_comic_button">Next Comic Button</string>
